# GateVRClient

./: Cargo.toml  LICENSE  README.md
assets/models/: arrow.fbx  base.fbx  niko.fbx  nikoAnimated.fbx  plane.fbx  skybox.fbx  sphere.fbx  tablet.fbx  test.fbx  test2.fbx
assets/worlds/: home.json
client_assets/models/: sphere.fbx
src/: main.rs
src/interract/: mod.rs  raycast.rs
src/network/: users.rs
src/physics/: gravity.rs  mod.rs  movement.rs
src/renderer/: mod.rs  render.rs  setup.rs  texture_object.rs  transform.rs  transforms.rs  vertex.rs
src/setup/: fonts.rs
src/shaders/: default.wgsl  displacement.wgsl  displacement_bones.wgsl
src/world/: material.rs  mod.rs  object.rs  scene.rs  world.rs
src/world/objects/: FbxParser.rs  cube.rs  cube_atlas.rs  fbx_parser.rs  mod.rs  plane_atlas.rs  player.rs  text.rs
src/xr/: mod.rs  xr_manager.rs
