[package]
name = "GateVRClient"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "0.17"
cgmath = "0.18"
winit = "0.28"
env_logger = "0.10"
pollster = "0.2"
openxr = "0.19"
rust-embed = "6.6.0"
image = "0.24"
bytemuck = { version = "1.4", features = ["derive"] }
fbx = "0.2"
fontdue = "0.7"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
url = "2.5.8"
tokio = "1.52.2"
tungstenite = { version = "0.29.0", features = ["native-tls"] }
cap = "0.1.2"
